# OmniAD

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TDD  TDD.txt  TDD_transported.txt  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: _types.py  _utils.py  worker.py
benchmarks/overhead/: natives.py  run.py
benchmarks/performance/: run.py
benchmarks/presets/: fast.json  precise.json
benchmarks/quality/: run.py
omniad/: __init__.py  presets.py  registry.py
omniad/algos/cv/: autoencoder.py
omniad/algos/tabular/: iforest.py
omniad/algos/text/: bert.py  tfidf.py
omniad/algos/timeseries/: lstm.py
omniad/core/: _logging.py  base.py  exceptions.py  metrics.py  mixins.py
omniad/core/adapters/: sklearn_adapter.py  torch_adapter.py  transformers_adapter.py
omniad/utils/: deps.py  detectors.py  errors.py  text.py  thresholds.py  timeseries.py  validation.py
omniad/viz/: __init__.py  plotting_cv.py  plotting_tabular.py  plotting_ts.py  utils.py
tests/: conftest.py  test_common.py  test_factory.py  test_plotting.py  test_presets.py  test_verbose.py
tests/algos/cv/: test_autoencoder.py
tests/algos/tabular/: test_iforest.py
tests/algos/text/: test_bert.py  test_tfidf.py
tests/algos/timeseries/: test_lstm.py
tests/core/: test_metrics.py  test_thresholds.py  test_validation.py
