[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "omniad"
version = "0.1.0"
description = "Universal Anomaly Detection Library"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "joblib>=1.5.3",
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["myenv", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "N803", # allow arguments 'X'
    "N806"
]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["myenv/", "venv/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "deterministic: enable strict determinism mode",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.19.1",
    "ruff>=0.15.10",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.1.0",
    "psutil>=7.2.2",
    "pandas>=2.3.3",
]

deep = [
    "torch>=2.8.0",
    "torchvision",
]

text = [
    "transformers>=4.57.6",
    # "nltk", # maybe
]

graph = [
    "pygod>=1.1.0",
    "torch_geometric>=2.6.1",
]

viz = [
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

full = [
    "omniad[deep,text,graph,viz]"
]

[tool.setuptools]
packages = ["omniad"]
